--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
             margin-left: -158px;
             top: 100px;
             border: 1px solid #eee;
+            background: #fff;
         }
         .rule-content > div {
             margin-bottom: 5px;
