--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
             white-space: nowrap;
         }
         a {
-            color: blue;
+            text-decoration: none;
+            color: #0034f1;
         }
         a.visited {
             color: gray;
@@ -77,7 +78,7 @@
         * {
             vertical-align: middle;
         }
-        *:focus {
+        input:focus, select:focus {
             outline: 1px solid #3087ff;
         }
         .rule {
